--- a/src/admin/iFolderAdmin.ja.resx
+++ b/src/admin/iFolderAdmin.ja.resx
@@ -106,6 +106,9 @@
   <data name="ERRORINVALIDDATA">
     <value>すべてのフィールドが入力必須フィールドです。確認してから再度入力してください</value>
   </data>
+  <data name="IFOLDERADMINS">
+    <value>iFolder管理者</value>
+  </data>
   <data name="LOGIN">
     <value>ログイン</value>
   </data>
@@ -391,6 +394,9 @@
   <data name="GROUPLISTTAG">
     <value>ユーザグループ:</value>
   </data>
+  <data name="ADDADMINS">
+    <value>管理者の追加</value>
+  </data>
   <data name="MINUTES">
     <value>分</value>
   </data>
@@ -499,9 +505,6 @@
   <data name="ADDNEWORSELECTGROUPTOEDIT">
     <value>選択した管理者のグループの追加または編集</value>
   </data>
-  <data name="HELP">
-    <value>ヘルプ</value>
-  </data>
   <data name="SIZE">
     <value>サイズ</value>
   </data>
@@ -558,9 +561,6 @@
   </data>
   <data name="SERVERDETAILS">
     <value>サーバの詳細</value>
-  </data>
-  <data name="LDAPUPSINCE">
-    <value>稼働期間:</value>
   </data>
   <data name="USERLOGINDISABLED">
     <value>ユーザログインの無効化</value>
@@ -880,6 +880,9 @@
   <data name="GENERATEDAILYREPORT">
     <value>毎日、{0} ～ {1} の間にレポートを生成</value>
   </data>
+  <data name="ERRORINSTRUCTIONS">
+    <value>&lt;p&gt;iFolder Web Accessに予期せぬエラーが発生しました。&lt;/p&gt; &lt;p&gt;申し訳ありませんが、ログアウトして再度実行してください。&lt;/p&gt;</value>
+  </data>
   <data name="MEMBER">
     <value>メンバー</value>
   </data>
@@ -906,6 +909,9 @@
   </data>
   <data name="TOTALIFOLDERSTAG">
     <value>iFolderの合計:</value>
+  </data>
+  <data name="LOGINIFOLDERSERVER">
+    <value>iFolderサーバ:</value>
   </data>
   <data name="SELECTMEMBERTOADD">
     <value>新しい2番目の管理者の選択</value>
@@ -952,17 +958,14 @@
   <data name="LOGINLANGUAGE">
     <value>言語:</value>
   </data>
-  <data name="ADMINLOGFILE">
-    <value>Web管理者</value>
-  </data>
   <data name="INTERVALTAG">
     <value>間隔:</value>
   </data>
   <data name="SELECTIFOLDEROWNER">
     <value>iFolder「{0}」の所有者を選択</value>
   </data>
-  <data name="IFOLDERADMINS">
-    <value>iFolder管理者</value>
+  <data name="HELP">
+    <value>ヘルプ</value>
   </data>
   <data name="NAME:">
     <value>名前:</value>
@@ -979,8 +982,8 @@
   <data name="ERRORCANNOTADDADMIN">
     <value>メンバー {0} を管理者として追加できません。</value>
   </data>
-  <data name="ADDADMINS">
-    <value>管理者の追加</value>
+  <data name="LDAPUPSINCE">
+    <value>稼働期間:</value>
   </data>
   <data name="DAYTAG">
     <value>日:</value>
@@ -1024,14 +1027,14 @@
   <data name="DATASTORE">
     <value>データストア</value>
   </data>
+  <data name="FULLCONTROL">
+    <value>フル制御</value>
+  </data>
   <data name="CANNOTSETQUOTAPERUSERERROR">
     <value>メンバーごとに割り当てられているディスク割り当て量の合計がグループ割り当て量を超えているため、この制限を設定できません</value>
   </data>
   <data name="REPORTDIRECTORY">
     <value>ディレクトリのレポート</value>
-  </data>
-  <data name="EDIT">
-    <value>編集</value>
   </data>
   <data name="ATTAG">
     <value>時刻:</value>
@@ -1213,11 +1216,11 @@
   <data name="EXCLUDEDFILES">
     <value>ファイルの除外</value>
   </data>
-  <data name="LOGINIFOLDERSERVER">
-    <value>iFolderサーバ:</value>
+  <data name="ADMINLOGFILE">
+    <value>Web管理者</value>
   </data>
-  <data name="ERRORINSTRUCTIONS">
-    <value>&lt;p&gt;iFolder Web Accessに予期せぬエラーが発生しました。&lt;/p&gt; &lt;p&gt;申し訳ありませんが、ログアウトして再度実行してください。&lt;/p&gt;</value>
+  <data name="EDIT">
+    <value>編集</value>
   </data>
   <data name="SYSTEM">
     <value>システム</value>
