--- a/src/admin/iFolderAdmin.sk.resx
+++ b/src/admin/iFolderAdmin.sk.resx
@@ -106,6 +106,9 @@
   <data name="ERRORINVALIDDATA">
     <value>Všetky polia sú povinné. Skontrolujte ich a znova zadajte hodnoty</value>
   </data>
+  <data name="IFOLDERADMINS">
+    <value>Správcovia služby iFolder</value>
+  </data>
   <data name="LOGIN">
     <value>Prihlásiť sa</value>
   </data>
@@ -391,6 +394,9 @@
   <data name="GROUPLISTTAG">
     <value>Skupiny používateľov:</value>
   </data>
+  <data name="ADDADMINS">
+    <value>Pridať správcov</value>
+  </data>
   <data name="MINUTES">
     <value>Min.</value>
   </data>
@@ -499,9 +505,6 @@
   <data name="ADDNEWORSELECTGROUPTOEDIT">
     <value>Pridať alebo upraviť vybraté skupiny správcu</value>
   </data>
-  <data name="HELP">
-    <value>Pomocník</value>
-  </data>
   <data name="SIZE">
     <value>Veľkosť</value>
   </data>
@@ -558,9 +561,6 @@
   </data>
   <data name="SERVERDETAILS">
     <value>Podrobnosti o serveri</value>
-  </data>
-  <data name="LDAPUPSINCE">
-    <value>Aktívne od:</value>
   </data>
   <data name="USERLOGINDISABLED">
     <value>Zakázať prihlásenie používateľa</value>
@@ -880,6 +880,9 @@
   <data name="GENERATEDAILYREPORT">
     <value>Generovať zostavu každý deň o {0} do {1}</value>
   </data>
+  <data name="ERRORINSTRUCTIONS">
+    <value>&lt;p&gt;Služba iFolder Web Access narazila na neočakávanú chybu.&lt;/p&gt; &lt;p&gt;Ospravedlňujeme sa za spôsobené ťažkosti. Odhláste sa a skúste to znova.&lt;/p&gt;</value>
+  </data>
   <data name="MEMBER">
     <value>Člen</value>
   </data>
@@ -906,6 +909,9 @@
   </data>
   <data name="TOTALIFOLDERSTAG">
     <value>Celkový počet priečinkov iFolder:</value>
+  </data>
+  <data name="LOGINIFOLDERSERVER">
+    <value>Server služby iFolder:</value>
   </data>
   <data name="SELECTMEMBERTOADD">
     <value>Vybrať nového sekundárneho správcu</value>
@@ -952,17 +958,14 @@
   <data name="LOGINLANGUAGE">
     <value>Jazyk:</value>
   </data>
-  <data name="ADMINLOGFILE">
-    <value>Správca webovej lokality</value>
-  </data>
   <data name="INTERVALTAG">
     <value>Interval:</value>
   </data>
   <data name="SELECTIFOLDEROWNER">
     <value>Vyberte vlastníka priečinka iFolder „{0}“</value>
   </data>
-  <data name="IFOLDERADMINS">
-    <value>Správcovia služby iFolder</value>
+  <data name="HELP">
+    <value>Pomocník</value>
   </data>
   <data name="NAME:">
     <value>Názov:</value>
@@ -979,8 +982,8 @@
   <data name="ERRORCANNOTADDADMIN">
     <value>Používateľa {0} nie je možné pridať ako správcu.</value>
   </data>
-  <data name="ADDADMINS">
-    <value>Pridať správcov</value>
+  <data name="LDAPUPSINCE">
+    <value>Aktívne od:</value>
   </data>
   <data name="DAYTAG">
     <value>Deň:</value>
@@ -1024,14 +1027,14 @@
   <data name="DATASTORE">
     <value>Pamäť údajov</value>
   </data>
+  <data name="FULLCONTROL">
+    <value>Úplné ovládanie</value>
+  </data>
   <data name="CANNOTSETQUOTAPERUSERERROR">
     <value>Tento limit nie je možné nastaviť, pretože celková vyhradená kvóta disku na používateľa prekračuje hodnotu kvóty pre skupinu</value>
   </data>
   <data name="REPORTDIRECTORY">
     <value>Adresár zostavy</value>
-  </data>
-  <data name="EDIT">
-    <value>Upraviť</value>
   </data>
   <data name="ATTAG">
     <value>O:</value>
@@ -1213,11 +1216,11 @@
   <data name="EXCLUDEDFILES">
     <value>Vylúčené súbory</value>
   </data>
-  <data name="LOGINIFOLDERSERVER">
-    <value>Server služby iFolder:</value>
+  <data name="ADMINLOGFILE">
+    <value>Správca webovej lokality</value>
   </data>
-  <data name="ERRORINSTRUCTIONS">
-    <value>&lt;p&gt;Služba iFolder Web Access narazila na neočakávanú chybu.&lt;/p&gt; &lt;p&gt;Ospravedlňujeme sa za spôsobené ťažkosti. Odhláste sa a skúste to znova.&lt;/p&gt;</value>
+  <data name="EDIT">
+    <value>Upraviť</value>
   </data>
   <data name="SYSTEM">
     <value>Systém</value>
